[gd_scene load_steps=30 format=3 uid="uid://clod5sdqsxq8x"]

[ext_resource type="Script" path="res://Scripts/Core/WorldMap.gd" id="1_x0c8h"]
[ext_resource type="Texture2D" uid="uid://b2vxgwmpij6t7" path="res://Imports/Sprites/EpisodeFifteen/BigWorldMap.png" id="2_42syh"]
[ext_resource type="Script" path="res://Scripts/Core/WorldMapLevel.gd" id="3_apldq"]
[ext_resource type="Texture2D" uid="uid://srctfqa7xeex" path="res://Imports/Sprites/EpisodeFifteen/locked.png" id="3_frjcs"]
[ext_resource type="Texture2D" uid="uid://cfn68x1o7kr2v" path="res://Imports/Sprites/EpisodeOne/09-Idle Sword/Idle Sword 01.png" id="4_p543v"]
[ext_resource type="Texture2D" uid="uid://cbbwq1rvnp8im" path="res://Imports/Sprites/EpisodeSixteen/Coin.png" id="5_ygnaw"]
[ext_resource type="Texture2D" uid="uid://drst04jmf0hmv" path="res://Imports/Sprites/EpisodeSixteen/Skull.png" id="6_bkwu2"]
[ext_resource type="Texture2D" uid="uid://cwpc1e36a5ic7" path="res://Imports/Sprites/EpisodeOne/09-Idle Sword/Idle Sword 02.png" id="6_evo8c"]
[ext_resource type="Texture2D" uid="uid://b1fyha18mwjli" path="res://Imports/Sprites/EpisodeTwo/10-Run Sword/Run Sword 05.png" id="7_goast"]
[ext_resource type="Texture2D" uid="uid://bpjrl6tgub36n" path="res://Imports/Sprites/EpisodeSixteen/Health.png" id="7_tv4tb"]
[ext_resource type="Texture2D" uid="uid://crbif3eu6yqpw" path="res://Imports/Sprites/EpisodeOne/09-Idle Sword/Idle Sword 03.png" id="8_ypl1m"]
[ext_resource type="Texture2D" uid="uid://dhevufswrqeun" path="res://Imports/Sprites/EpisodeOne/09-Idle Sword/Idle Sword 04.png" id="9_tksgq"]
[ext_resource type="Texture2D" uid="uid://bfftxq83ca6bn" path="res://Imports/Sprites/EpisodeOne/09-Idle Sword/Idle Sword 05.png" id="10_i0vqj"]
[ext_resource type="Texture2D" uid="uid://bga4goehyqjr6" path="res://Imports/Sprites/EpisodeTwo/10-Run Sword/Run Sword 01.png" id="11_gpe0e"]
[ext_resource type="Texture2D" uid="uid://blgiw058nd40h" path="res://Imports/Sprites/EpisodeTwo/10-Run Sword/Run Sword 02.png" id="12_7ksnr"]
[ext_resource type="Texture2D" uid="uid://dmeavyukjeixj" path="res://Imports/Sprites/EpisodeTwo/10-Run Sword/Run Sword 03.png" id="13_evrs8"]
[ext_resource type="Texture2D" uid="uid://b1jo8tsiwnyjx" path="res://Imports/Sprites/EpisodeTwo/10-Run Sword/Run Sword 04.png" id="14_jd3cn"]
[ext_resource type="Texture2D" uid="uid://dqgmjo8co4nku" path="res://Imports/Sprites/EpisodeTwo/10-Run Sword/Run Sword 06.png" id="15_isk6h"]
[ext_resource type="Texture2D" uid="uid://by0i43d2dsy8d" path="res://Imports/Sprites/EpisodeTwo/11-Jump Sword/Jump Sword 01.png" id="16_hpkrt"]
[ext_resource type="Texture2D" uid="uid://d2ulduq7eiuod" path="res://Imports/Sprites/EpisodeTwo/11-Jump Sword/Jump Sword 02.png" id="17_xg0ch"]
[ext_resource type="Texture2D" uid="uid://bsrjevky8ok2k" path="res://Imports/Sprites/EpisodeTwo/11-Jump Sword/Jump Sword 03.png" id="18_47j3s"]
[ext_resource type="AudioStream" uid="uid://csww2xg2eg8cu" path="res://tvari-tokyo-cafe-159065.mp3" id="24_x3tun"]

[sub_resource type="Animation" id="Animation_lm8uc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CoinSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-36, -39)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CoinSprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SkullSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -51)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SkullSprite:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("HealthSprite:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(36, -39)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("HealthSprite:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_xnjcc"]
resource_name = "Show"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CoinSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-36, -39)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CoinSprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SkullSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -51)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SkullSprite:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("HealthSprite:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(36, -39)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("HealthSprite:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_krpty"]
_data = {
"RESET": SubResource("Animation_lm8uc"),
"Show": SubResource("Animation_xnjcc")
}

[sub_resource type="Animation" id="Animation_lcr13"]
resource_name = "Idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.2001, 0.2002, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("4_p543v"), ExtResource("6_evo8c"), ExtResource("7_goast"), ExtResource("7_goast"), ExtResource("8_ypl1m"), ExtResource("9_tksgq"), ExtResource("10_i0vqj")]
}

[sub_resource type="Animation" id="Animation_c6utw"]
resource_name = "Run"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("11_gpe0e"), ExtResource("12_7ksnr"), ExtResource("13_evrs8"), ExtResource("14_jd3cn"), ExtResource("7_goast"), ExtResource("15_isk6h")]
}

[sub_resource type="Animation" id="Animation_f5ict"]
resource_name = "Select"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("16_hpkrt"), ExtResource("17_xg0ch"), ExtResource("18_47j3s"), ExtResource("17_xg0ch"), ExtResource("16_hpkrt")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tn7lp"]
_data = {
"Idle": SubResource("Animation_lcr13"),
"Run": SubResource("Animation_c6utw"),
"Select": SubResource("Animation_f5ict")
}

[node name="WorldMap" type="Node2D"]
script = ExtResource("1_x0c8h")

[node name="BGcolor" type="ColorRect" parent="."]
offset_left = -2134.0
offset_top = -1877.0
offset_right = -1734.0
offset_bottom = -1477.0
scale = Vector2(10, 10)
color = Color(0.572549, 0.662745, 0.807843, 1)

[node name="Background" type="TextureRect" parent="."]
offset_left = -290.0
offset_top = -187.0
offset_right = -98.0
offset_bottom = -63.0
scale = Vector2(3, 3)
texture = ExtResource("2_42syh")

[node name="LevelHolder" type="Node2D" parent="."]

[node name="Level1" type="Node2D" parent="LevelHolder" node_paths=PackedStringArray("down")]
position = Vector2(-221, 17)
script = ExtResource("3_apldq")
down = NodePath("../Level2")

[node name="Sprite2D" type="Sprite2D" parent="LevelHolder/Level1"]
scale = Vector2(3, 3)
texture = ExtResource("3_frjcs")

[node name="StatDisplay" type="Node2D" parent="LevelHolder/Level1"]
visible = false

[node name="CoinSprite" type="Sprite2D" parent="LevelHolder/Level1/StatDisplay"]
visible = false
position = Vector2(-36, -39)
scale = Vector2(3, 3)
texture = ExtResource("5_ygnaw")

[node name="SkullSprite" type="Sprite2D" parent="LevelHolder/Level1/StatDisplay"]
position = Vector2(0, -51)
scale = Vector2(3, 3)
texture = ExtResource("6_bkwu2")

[node name="HealthSprite" type="Sprite2D" parent="LevelHolder/Level1/StatDisplay"]
position = Vector2(36, -39)
scale = Vector2(3, 3)
texture = ExtResource("7_tv4tb")

[node name="AnimationPlayer" type="AnimationPlayer" parent="LevelHolder/Level1/StatDisplay"]
libraries = {
"": SubResource("AnimationLibrary_krpty")
}

[node name="Level2" type="Node2D" parent="LevelHolder" node_paths=PackedStringArray("up", "right")]
position = Vector2(-221, 113)
script = ExtResource("3_apldq")
up = NodePath("../Level1")
right = NodePath("../Level3")

[node name="Sprite2D" type="Sprite2D" parent="LevelHolder/Level2"]
scale = Vector2(3, 3)
texture = ExtResource("3_frjcs")

[node name="StatDisplay" type="Node2D" parent="LevelHolder/Level2"]
visible = false

[node name="CoinSprite" type="Sprite2D" parent="LevelHolder/Level2/StatDisplay"]
visible = false
position = Vector2(-36, -39)
scale = Vector2(3, 3)
texture = ExtResource("5_ygnaw")

[node name="SkullSprite" type="Sprite2D" parent="LevelHolder/Level2/StatDisplay"]
position = Vector2(0, -51)
scale = Vector2(3, 3)
texture = ExtResource("6_bkwu2")

[node name="HealthSprite" type="Sprite2D" parent="LevelHolder/Level2/StatDisplay"]
position = Vector2(36, -39)
scale = Vector2(3, 3)
texture = ExtResource("7_tv4tb")

[node name="AnimationPlayer" type="AnimationPlayer" parent="LevelHolder/Level2/StatDisplay"]
libraries = {
"": SubResource("AnimationLibrary_krpty")
}

[node name="Level3" type="Node2D" parent="LevelHolder" node_paths=PackedStringArray("up", "left")]
position = Vector2(-125, 113)
script = ExtResource("3_apldq")
up = NodePath("../Level4")
left = NodePath("../Level2")

[node name="Sprite2D" type="Sprite2D" parent="LevelHolder/Level3"]
scale = Vector2(3, 3)
texture = ExtResource("3_frjcs")

[node name="StatDisplay" type="Node2D" parent="LevelHolder/Level3"]
visible = false

[node name="CoinSprite" type="Sprite2D" parent="LevelHolder/Level3/StatDisplay"]
visible = false
position = Vector2(-36, -39)
scale = Vector2(3, 3)
texture = ExtResource("5_ygnaw")

[node name="SkullSprite" type="Sprite2D" parent="LevelHolder/Level3/StatDisplay"]
position = Vector2(0, -51)
scale = Vector2(3, 3)
texture = ExtResource("6_bkwu2")

[node name="HealthSprite" type="Sprite2D" parent="LevelHolder/Level3/StatDisplay"]
position = Vector2(36, -39)
scale = Vector2(3, 3)
texture = ExtResource("7_tv4tb")

[node name="AnimationPlayer" type="AnimationPlayer" parent="LevelHolder/Level3/StatDisplay"]
libraries = {
"": SubResource("AnimationLibrary_krpty")
}

[node name="Level4" type="Node2D" parent="LevelHolder" node_paths=PackedStringArray("down", "right")]
position = Vector2(-125, 17)
script = ExtResource("3_apldq")
down = NodePath("../Level3")
right = NodePath("../Level5")

[node name="Sprite2D" type="Sprite2D" parent="LevelHolder/Level4"]
scale = Vector2(3, 3)
texture = ExtResource("3_frjcs")

[node name="StatDisplay" type="Node2D" parent="LevelHolder/Level4"]
visible = false

[node name="CoinSprite" type="Sprite2D" parent="LevelHolder/Level4/StatDisplay"]
visible = false
position = Vector2(-36, -39)
scale = Vector2(3, 3)
texture = ExtResource("5_ygnaw")

[node name="SkullSprite" type="Sprite2D" parent="LevelHolder/Level4/StatDisplay"]
position = Vector2(0, -51)
scale = Vector2(3, 3)
texture = ExtResource("6_bkwu2")

[node name="HealthSprite" type="Sprite2D" parent="LevelHolder/Level4/StatDisplay"]
position = Vector2(36, -39)
scale = Vector2(3, 3)
texture = ExtResource("7_tv4tb")

[node name="AnimationPlayer" type="AnimationPlayer" parent="LevelHolder/Level4/StatDisplay"]
libraries = {
"": SubResource("AnimationLibrary_krpty")
}

[node name="Level5" type="Node2D" parent="LevelHolder" node_paths=PackedStringArray("down", "left")]
position = Vector2(-77, -80)
script = ExtResource("3_apldq")
down = NodePath("../Level6")
left = NodePath("../Level4")

[node name="Sprite2D" type="Sprite2D" parent="LevelHolder/Level5"]
scale = Vector2(3, 3)
texture = ExtResource("3_frjcs")

[node name="StatDisplay" type="Node2D" parent="LevelHolder/Level5"]
visible = false

[node name="CoinSprite" type="Sprite2D" parent="LevelHolder/Level5/StatDisplay"]
visible = false
position = Vector2(-36, -39)
scale = Vector2(3, 3)
texture = ExtResource("5_ygnaw")

[node name="SkullSprite" type="Sprite2D" parent="LevelHolder/Level5/StatDisplay"]
position = Vector2(0, -51)
scale = Vector2(3, 3)
texture = ExtResource("6_bkwu2")

[node name="HealthSprite" type="Sprite2D" parent="LevelHolder/Level5/StatDisplay"]
position = Vector2(36, -39)
scale = Vector2(3, 3)
texture = ExtResource("7_tv4tb")

[node name="AnimationPlayer" type="AnimationPlayer" parent="LevelHolder/Level5/StatDisplay"]
libraries = {
"": SubResource("AnimationLibrary_krpty")
}

[node name="Level6" type="Node2D" parent="LevelHolder" node_paths=PackedStringArray("left", "right")]
position = Vector2(19, 17)
script = ExtResource("3_apldq")
left = NodePath("../Level5")
right = NodePath("../Level7")

[node name="Sprite2D" type="Sprite2D" parent="LevelHolder/Level6"]
scale = Vector2(3, 3)
texture = ExtResource("3_frjcs")

[node name="StatDisplay" type="Node2D" parent="LevelHolder/Level6"]
visible = false

[node name="CoinSprite" type="Sprite2D" parent="LevelHolder/Level6/StatDisplay"]
visible = false
position = Vector2(-36, -39)
scale = Vector2(3, 3)
texture = ExtResource("5_ygnaw")

[node name="SkullSprite" type="Sprite2D" parent="LevelHolder/Level6/StatDisplay"]
position = Vector2(0, -51)
scale = Vector2(3, 3)
texture = ExtResource("6_bkwu2")

[node name="HealthSprite" type="Sprite2D" parent="LevelHolder/Level6/StatDisplay"]
position = Vector2(36, -39)
scale = Vector2(3, 3)
texture = ExtResource("7_tv4tb")

[node name="AnimationPlayer" type="AnimationPlayer" parent="LevelHolder/Level6/StatDisplay"]
libraries = {
"": SubResource("AnimationLibrary_krpty")
}

[node name="Level7" type="Node2D" parent="LevelHolder" node_paths=PackedStringArray("up", "left")]
position = Vector2(115, 113)
script = ExtResource("3_apldq")
up = NodePath("../Level8")
left = NodePath("../Level6")

[node name="Sprite2D" type="Sprite2D" parent="LevelHolder/Level7"]
scale = Vector2(3, 3)
texture = ExtResource("3_frjcs")

[node name="StatDisplay" type="Node2D" parent="LevelHolder/Level7"]
visible = false

[node name="CoinSprite" type="Sprite2D" parent="LevelHolder/Level7/StatDisplay"]
visible = false
position = Vector2(-36, -39)
scale = Vector2(3, 3)
texture = ExtResource("5_ygnaw")

[node name="SkullSprite" type="Sprite2D" parent="LevelHolder/Level7/StatDisplay"]
position = Vector2(0, -51)
scale = Vector2(3, 3)
texture = ExtResource("6_bkwu2")

[node name="HealthSprite" type="Sprite2D" parent="LevelHolder/Level7/StatDisplay"]
position = Vector2(36, -39)
scale = Vector2(3, 3)
texture = ExtResource("7_tv4tb")

[node name="AnimationPlayer" type="AnimationPlayer" parent="LevelHolder/Level7/StatDisplay"]
libraries = {
"": SubResource("AnimationLibrary_krpty")
}

[node name="Level8" type="Node2D" parent="LevelHolder" node_paths=PackedStringArray("down", "right")]
position = Vector2(163, -30)
script = ExtResource("3_apldq")
down = NodePath("../Level7")
right = NodePath("../Level9")

[node name="Sprite2D" type="Sprite2D" parent="LevelHolder/Level8"]
scale = Vector2(3, 3)
texture = ExtResource("3_frjcs")

[node name="StatDisplay" type="Node2D" parent="LevelHolder/Level8"]
visible = false

[node name="CoinSprite" type="Sprite2D" parent="LevelHolder/Level8/StatDisplay"]
position = Vector2(-36, -39)
scale = Vector2(3, 3)
texture = ExtResource("5_ygnaw")

[node name="SkullSprite" type="Sprite2D" parent="LevelHolder/Level8/StatDisplay"]
position = Vector2(0, -51)
scale = Vector2(3, 3)
texture = ExtResource("6_bkwu2")

[node name="HealthSprite" type="Sprite2D" parent="LevelHolder/Level8/StatDisplay"]
position = Vector2(36, -39)
scale = Vector2(3, 3)
texture = ExtResource("7_tv4tb")

[node name="AnimationPlayer" type="AnimationPlayer" parent="LevelHolder/Level8/StatDisplay"]
libraries = {
"": SubResource("AnimationLibrary_krpty")
}

[node name="Level9" type="Node2D" parent="LevelHolder" node_paths=PackedStringArray("down")]
position = Vector2(211, -127)
script = ExtResource("3_apldq")
down = NodePath("../Level8")

[node name="Sprite2D" type="Sprite2D" parent="LevelHolder/Level9"]
scale = Vector2(3, 3)
texture = ExtResource("3_frjcs")

[node name="StatDisplay" type="Node2D" parent="LevelHolder/Level9"]
visible = false

[node name="CoinSprite" type="Sprite2D" parent="LevelHolder/Level9/StatDisplay"]
visible = false
position = Vector2(-36, -39)
scale = Vector2(3, 3)
texture = ExtResource("5_ygnaw")

[node name="SkullSprite" type="Sprite2D" parent="LevelHolder/Level9/StatDisplay"]
position = Vector2(0, -51)
scale = Vector2(3, 3)
texture = ExtResource("6_bkwu2")

[node name="HealthSprite" type="Sprite2D" parent="LevelHolder/Level9/StatDisplay"]
position = Vector2(36, -39)
scale = Vector2(3, 3)
texture = ExtResource("7_tv4tb")

[node name="AnimationPlayer" type="AnimationPlayer" parent="LevelHolder/Level9/StatDisplay"]
libraries = {
"": SubResource("AnimationLibrary_krpty")
}

[node name="Player" type="Sprite2D" parent="."]
position = Vector2(-220, 5)
texture = ExtResource("4_p543v")

[node name="Camera2D" type="Camera2D" parent="Player"]
position_smoothing_enabled = true
position_smoothing_speed = 3.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player"]
libraries = {
"": SubResource("AnimationLibrary_tn7lp")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("24_x3tun")
autoplay = true
